[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/gui/quest/Quest.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/Pause.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/Stadistics/Stadistics.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gui/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://scenes/gui/GUI.gd" type="Script" id=5]
[ext_resource path="res://scenes/gui/GameOver.gd" type="Script" id=6]
[ext_resource path="res://scenes/gui/XP.gd" type="Script" id=9]
[ext_resource path="res://scenes/gui/DialoguePopup.gd" type="Script" id=13]
[ext_resource path="res://assets/font/Font.tres" type="DynamicFont" id=14]
[ext_resource path="res://scenes/gui/inventory/Inventory.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/gui/hotbar/Hotbar.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/font/Schr√∂dinger.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/interface/GUI/emptybottle.png" type="Texture" id=18]
[ext_resource path="res://assets/interface/GUI/marcobottle.png" type="Texture" id=19]
[ext_resource path="res://assets/interface/GUI/filledbottle.png" type="Texture" id=20]
[ext_resource path="res://assets/interface/GUI/whitecircle.png" type="Texture" id=21]
[ext_resource path="res://scenes/gui/HealthGlobe.gd" type="Script" id=22]
[ext_resource path="res://scenes/gui/ManaGlobe.gd" type="Script" id=23]
[ext_resource path="res://assets/interface/GUI/whitebar.png" type="Texture" id=24]
[ext_resource path="res://scenes/gui/gear/Gear.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/gui/merchant/Merchant.tscn" type="PackedScene" id=26]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Dialogue:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect/Answers:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 17 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Equips" parent="." instance=ExtResource( 25 )]
visible = false

[node name="Inventory" parent="." instance=ExtResource( 15 )]
visible = false

[node name="Hotbar" parent="." instance=ExtResource( 16 )]

[node name="Stadistics" parent="." instance=ExtResource( 3 )]
visible = false

[node name="XPBar" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -10.0
margin_right = 240.0
color = Color( 0, 0, 0, 0.627451 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldenXPBar" type="TextureProgress" parent="XPBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -2.5
margin_right = 235.0
margin_bottom = 2.5
value = 70.0
texture_progress = ExtResource( 24 )
tint_progress = Color( 0.556863, 0.447059, 0.00784314, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="XPBar/GoldenXPBar"]

[node name="Label" type="Label" parent="XPBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -8.5
margin_right = 77.5
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
text = "EXPERIENCIA: 0/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthGlobe" type="Node" parent="."]
script = ExtResource( 22 )

[node name="GlobeFull" type="TextureRect" parent="HealthGlobe"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_right = 104.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlobeTransparent" type="TextureRect" parent="HealthGlobe"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -88.0
margin_right = 104.0
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HealthGlobe/GlobeTransparent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -44.0
margin_right = 60.0
margin_bottom = 44.0
value = 70.0
texture_progress = ExtResource( 21 )
fill_mode = 3
tint_progress = Color( 1, 0, 0, 0.470588 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HealthGlobe/GlobeTransparent/TextureProgress"]

[node name="HealthAmount" type="Label" parent="HealthGlobe/GlobeTransparent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -18.5
margin_right = 53.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 2 )
text = "SALUD
13000/13000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecoCorner" type="TextureRect" parent="HealthGlobe"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 64.0
texture = ExtResource( 19 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaGlobe" type="Node" parent="."]
script = ExtResource( 23 )

[node name="GlobeFull" type="TextureRect" parent="ManaGlobe"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -88.0
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlobeTransparent" type="TextureRect" parent="ManaGlobe"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -88.0
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="ManaGlobe/GlobeTransparent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -44.0
margin_right = 60.0
margin_bottom = 44.0
value = 70.0
texture_progress = ExtResource( 21 )
fill_mode = 3
tint_progress = Color( 0, 0, 1, 0.470588 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ManaGlobe/GlobeTransparent/TextureProgress"]

[node name="ManaAmount" type="Label" parent="ManaGlobe/GlobeTransparent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -18.5
margin_right = 53.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 3 )
text = "MANA
13000/13000"
align = 1
valign = 1

[node name="DecoCorner" type="TextureRect" parent="ManaGlobe"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -40.0
texture = ExtResource( 19 )
expand = true
flip_h = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merchant" parent="." instance=ExtResource( 26 )]
visible = false
z_index = -1

[node name="Quest" parent="." instance=ExtResource( 1 )]
visible = false

[node name="DialoguePopup" type="Popup" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -216.0
margin_right = 264.0
margin_bottom = -88.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="DialoguePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCName" type="Label" parent="DialoguePopup/ColorRect"]
margin_left = 5.0
margin_top = 2.0
margin_right = 51.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fiona"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="DialoguePopup/ColorRect"]
margin_left = 8.0
margin_top = 24.0
margin_right = 520.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "Hola aventurero! He
 perdido mi Collar. Puedes encontrarlo por mi?"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers" type="Label" parent="DialoguePopup/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -32.0
margin_right = 256.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[A] SI [B] NO"
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialoguePopup"]
anims/ShowDialogue = SubResource( 4 )

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.54902, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -44.0
margin_right = -112.0
margin_bottom = -25.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 14 )
text = "Has Perdido"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
"anims/game over" = SubResource( 5 )

[node name="Pause" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -180.0
margin_right = 216.0
margin_bottom = 124.0
size_flags_horizontal = 9
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 8.0
margin_right = -1.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 6 )
text = "PAUSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 48.0
margin_right = 31.0
margin_bottom = 75.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 7 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 104.0
margin_right = 31.0
margin_bottom = 127.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 8 )
text = "Save game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Pause/ColorRect"]
margin_left = 144.0
margin_top = 152.0
margin_right = 251.0
margin_bottom = 175.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 9 )
text = "Load game"

[node name="Options" type="Button" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 200.0
margin_right = 31.0
margin_bottom = 223.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 10 )
text = "Options"

[node name="Exit" type="Button" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 248.0
margin_right = 31.0
margin_bottom = 271.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 11 )
text = "Exit"

[node name="SaveMessage" type="Label" parent="Pause"]
visible = false
margin_left = 12.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 24.0
text = "Partida Guardada."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveTween" type="Tween" parent="Pause"]

[node name="Tutorial" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="Tutorial"]
margin_left = 16.0
margin_top = 136.0
margin_right = 280.0
margin_bottom = 256.0
color = Color( 1, 0.941176, 0.623529, 0.447059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Tutorial/Background"]
margin_left = 8.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 112.0
color = Color( 1, 1, 1, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tutorial/Background"]
margin_left = 16.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Movimientos B√°sicos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Label" parent="Tutorial/Background"]
margin_left = 16.0
margin_top = 40.0
margin_right = 200.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A: Izquierda
D: Derecha
W: Arriba
S: Abajo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Tutorial"]
wait_time = 7.0
one_shot = true

[connection signal="level_up" from="." to="Hotbar" method="_on_GUI_level_up"]
[connection signal="level_up" from="." to="XPBar" method="_on_GUI_level_up"]
[connection signal="stats_changed" from="." to="Equips" method="_on_GUI_stats_changed"]
[connection signal="stats_changed" from="." to="Inventory" method="_on_GUI_stats_changed"]
[connection signal="stats_changed" from="." to="Hotbar" method="_on_GUI_stats_changed"]
[connection signal="stats_changed" from="." to="Stadistics" method="_on_GUI_stats_changed"]
[connection signal="config_pressed" from="Hotbar" to="." method="_on_Hotbar_config_pressed"]
[connection signal="gear_pressed" from="Hotbar" to="." method="_on_Hotbar_gear_pressed"]
[connection signal="inventory_pressed" from="Hotbar" to="." method="_on_Hotbar_inventory_pressed"]
[connection signal="quest_pressed" from="Hotbar" to="." method="_on_Hotbar_quest_pressed"]
[connection signal="mouse_entered" from="XPBar" to="XPBar" method="_on_XPBar_mouse_entered"]
[connection signal="mouse_exited" from="XPBar" to="XPBar" method="_on_XPBar_mouse_exited"]
[connection signal="mouse_entered" from="HealthGlobe/GlobeTransparent" to="HealthGlobe" method="_on_GlobeTransparent_mouse_entered"]
[connection signal="mouse_exited" from="HealthGlobe/GlobeTransparent" to="HealthGlobe" method="_on_GlobeTransparent_mouse_exited"]
[connection signal="mouse_entered" from="ManaGlobe/GlobeTransparent" to="ManaGlobe" method="_on_GlobeTransparent_mouse_entered"]
[connection signal="mouse_exited" from="ManaGlobe/GlobeTransparent" to="ManaGlobe" method="_on_GlobeTransparent_mouse_exited"]
[connection signal="animation_finished" from="DialoguePopup/AnimationPlayer" to="DialoguePopup" method="_on_AnimationPlayer_animation_finished"]
[connection signal="game_over" from="GameOver" to="." method="_on_GameOver_game_over"]
[connection signal="pressed" from="Pause/ColorRect/Continue" to="Pause" method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause/ColorRect/Save" to="Pause" method="_on_Save_pressed"]
[connection signal="pressed" from="Pause/ColorRect/Load" to="Pause" method="_on_Load_pressed"]
[connection signal="pressed" from="Pause/ColorRect/Exit" to="Pause" method="_on_Exit_pressed"]
[connection signal="timeout" from="Tutorial/Timer" to="Tutorial" method="_on_Timer_timeout"]
